--- a/Client/src/components/sidebar/sidebar.scss
+++ b/Client/src/components/sidebar/sidebar.scss
@@ -4,14 +4,14 @@
     top: 0;
     left: 0;
     height: 100vh;
-    width: 320px;
+    width: 300px;
     background-color: #fff;
     font-size: 10px;
     &__logo {
         display: grid;
         place-items: center;
         height: 120px;
-        font-size: 1.3rem;
+        font-size: 1.8rem;
         font-weight: 700;
         font-family: 'Mochiy Pop P one', sans-serif;
     }
@@ -24,7 +24,7 @@
             align-items: center;
             place-content: flex-start;
             padding: 1rem 3rem;
-            font-size: 0.95rem;
+            font-size: 1.3rem;
             font-weight: 500;
             color: #555555;
             transition: color 0.3s ease-in-out;
@@ -56,4 +56,12 @@
             
         }
     }
+}
+
+#boxButtonLogOut{
+    margin-top: 10px;
+}
+
+#buttonLogOut{
+    font-size: 1.1rem;
 }
