--- a/Client/src/components/Toasts/Toast.css
+++ b/Client/src/components/Toasts/Toast.css
@@ -42,7 +42,7 @@
 	margin: 0 0 6px;
 	padding: 30px;
 	margin-bottom: 15px;
-	width: 300px;
+	min-width: 320px;
 	max-height: 100px;
 	border-radius: 3px 3px 3px 3px;
 	box-shadow: 0 0 10px #999;
@@ -64,7 +64,7 @@
 	text-align: left;
 	margin-top: 0;
 	margin-bottom: 6px;
-    width: 300px;
+    min-width: 320px;
     height: 18px;
 }
 
@@ -84,13 +84,13 @@
 }
 
 .notification-image img {
-    width: 30px;
+    min-width: 30px;
     height: 30px;
 }
 
 .toast {
    
-    width: 365px;
+    min-width: 365px;
 	color: #fff;
 	padding: 18px 15px 18px 10px;
 }
