--- a/Client/src/components/Modals/CSS/AddUsersModal.css
+++ b/Client/src/components/Modals/CSS/AddUsersModal.css
@@ -11,6 +11,7 @@
   .text-field__input {
     display: block;
     width: 100%;
+    min-width: 270px;
     height: calc(1.9rem + 2px);
     padding: 0.375rem 0.75rem;
     font-family: inherit;
